--- a/Charity-project/finding_donors.ipynb
+++ b/Charity-project/finding_donors.ipynb
@@ -1568,8 +1568,8 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "- Assumptions were partially correct. For example, the chart confirms that capital-gain, capital-loss and age are important features. However, it turned out that capital-gain and capital-loss are not as important as I expected them to be. Surprisingly, the marital status plays an important role as well. Maybe it's because of the fact that people who are in a relationship tend to have more money if both spouses work for a company and their expenses divide evenly. \n",
-    "- Finally, there's the education number which seems to be the most important features. Maybe it's because of the fact the education number gives us some information about whether the person studies or not. Furthermore, it might incorporate some knowledge about the person's age."
+    "- Assumptions were partially correct. For example, the chart confirms that capital-gain, capital-loss and age are important features. However, it turned out that capital-gain and capital-loss are not as important as I expected them to be. the marital status plays an important role as well. \n",
+    "- there's the education number which seems to be the most important features. Maybe it's because of the fact the education number gives us some information about whether the person studies or not. Furthermore, it might incorporate some knowledge about the person's age."
    ]
   },
   {
@@ -1639,7 +1639,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "The accuracy / f-score of the model decreases. So, obviously, the removed features do still contain important information that is important for an accuracy classification. Since the training time can still be done in a reasonable time, I wouldn't reduce the number of features. However, if it was, I would suggest to do it as the loss of accuracy is not too high."
+    "The accuracy / f-score of the model decreases. So, the removed features do still contain important information that is important for an accuracy classification. Since the training time can still be done in a reasonable time, I wouldn't reduce the number of features. However, if it was, I would suggest to do it as the loss of accuracy is not too high."
    ]
   },
   {
@@ -1660,17 +1660,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['[NbConvertApp] Converting notebook finding_donors.ipynb to html',\n",
-       " '[NbConvertApp] Writing 525717 bytes to finding_donors.html']"
+       " '[NbConvertApp] Writing 526193 bytes to finding_donors.html']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
